Something went wrong while setting issue due date.
"Set up associations..." in preferences doesn't work correctly
It appears only the window which is used for XP, not the UI for Vista and higher.
Cause:
hr = CoInitializeEx( NULL, COINIT_MULTITHREADED );
if( SUCCEEDED(hr) )
{
...
}
Return value is 0x80010106 (RPC_E_CHANGED_MODE, Cannot change thread mode after it is set)
This appears since commit 39e4fad1
As workaround, this will work:
hr = CoInitializeEx( NULL, COINIT_MULTITHREADED );
if( SUCCEEDED(hr) || hr == RPC_E_CHANGED_MODE )
{
...
}