Qt4: allow either COM model for associations (fixes #14323)

The model does not matter here as affected objects do not outlive the
function call and are not used across threads. Still the references
counter of the apartment must remain balanced.

(cherry picked from commit aa9976b1f41fe7eb44b640163c5ff5f00a4e2953)
Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>