modules/gui/qt4/components/simple_preferences.cpp
@@ -1269,6 +1269,8 @@ void SPrefsPanel::assoDialog()
 {
     HRESULT hr;
     hr = CoInitializeEx( NULL, COINIT_MULTITHREADED );
+    if( hr == RPC_E_CHANGED_MODE )
+        hr = CoInitializeEx( NULL, COINIT_APARTMENTTHREADED );
     if( SUCCEEDED(hr) )
     {
         void *p;
